--- a/src/app/admin-user/admin-user.component.css
+++ b/src/app/admin-user/admin-user.component.css
@@ -5,6 +5,7 @@ section {
   table {
     width: 100%;
     border-collapse: collapse;
+    background-color: rgb(83, 122, 140,0.5);
   }
 
 th, td {
@@ -19,13 +20,13 @@ th, td {
 
     /* tr:not(:first-child):hover { */
   tr td:hover {
-    background-color: #f0f0f0; /* Slightly darken the row color */
+    background-color: #d3d3d3; /* Slightly darken the row color */
     transform: scale(1.02); /* Slightly enlarge the row */
 }
 
 /* To make the row slightly bigger on hover */
 tr:hover td {
-    background-color: #f0f0f0;
+    background-color: rgb(240, 240, 240, 0.8);
     transform: scale(1.02);
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
