--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
-    <a routerLink="/">HOME</a> |
-    <a routerLink="/bus">BUS  SCHEDULING</a> |
-    <a routerLink="/user">USERS</a> | 
-    <a routerLink="/logout">LOGOUT</a>
+    <a routerLink="/admin">HOME</a> |
+    <a routerLink="/admin/bus">BUS  SCHEDULING</a> |
+    <a routerLink="/admin/user">USERS</a> | 
+    <a routerLink="/admin/logout">LOGOUT</a>
 </nav>
