--- a/src/app/admin-main-page/admin-main-page.component.css
+++ b/src/app/admin-main-page/admin-main-page.component.css
@@ -9,7 +9,7 @@
 }
 /* Styling for the notification section */
 .notifications {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.65);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* padding-top: -10px; */
