--- a/src/app/navbar-user/navbar-user.component.html
+++ b/src/app/navbar-user/navbar-user.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <a routerLink="/">HOME</a> |
-    <a routerLink="/profile">PROFILE</a> |
-    <a routerLink="/logout">LOGOUT</a>
+    <a routerLink="/user">HOME</a> |
+    <a routerLink="/user/profile">PROFILE</a> |
+    <a routerLink="/user/logout">LOGOUT</a>
 </nav>
