--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,58 +5,53 @@
         <input id="tab-2" type="radio" name="tab" class="sign-up">
         <label for="tab-2" class="tab">Sign Up</label>
         <div class="login-form">
-            <!-- Sign In Form -->
             <div class="sign-in-htm">
-                <form [formGroup]="signInForm" (ngSubmit)="onSignInSubmit()">
-                    <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input" formControlName="username">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" formControlName="password">
-                    </div>
-                    <div class="group">
-                        <input id="check" type="checkbox" class="check" formControlName="rememberMe">
-                        <label for="check"><span class="icon"></span> Keep me Signed in</label>
-                    </div>
-                    <div class="group">
-                        <input type="submit" class="button" value="Sign In">
-                    </div>
-                </form>
+                <div class="group">
+                    <label for="user" class="label">Username</label>
+                    <input id="user" type="text" class="input">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Password</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <input id="check" type="checkbox" class="check" checked>
+                    <label for="check"><span class="icon"></span> Keep me Signed in</label>
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Sign In">
+                </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
                     <a href="#forgot">Forgot Password?</a>
                 </div>
             </div>
-            <!-- Sign Up Form -->
             <div class="sign-up-htm">
-                <form [formGroup]="signUpForm" (ngSubmit)="onSignUpSubmit()">
-                    <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input" formControlName="username">
-                    </div>
-                    <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" formControlName="password">
-                    </div>
-                    <div class="group">
-                        <label for="repeatPass" class="label">Repeat Password</label>
-                        <input id="repeatPass" type="password" class="input" formControlName="repeatPassword">
-                    </div>
-                    <div class="group">
-                        <label for="email" class="label">Email Address</label>
-                        <input id="email" type="text" class="input" formControlName="email">
-                    </div>
-                    <div class="group">
-                        <input type="submit" class="button" value="Sign Up">
-                    </div>
-                </form>
+                <div class="group">
+                    <label for="user" class="label">Username</label>
+                    <input id="user" type="text" class="input">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Password</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Repeat Password</label>
+                    <input id="pass" type="password" class="input" data-type="password">
+                </div>
+                <div class="group">
+                    <label for="pass" class="label">Email Address</label>
+                    <input id="pass" type="text" class="input">
+                </div>
+                <div class="group">
+                    <input type="submit" class="button" value="Sign Up">
+                </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
-                    <label for="tab-1">Already a Member?</label>
+                    <label for="tab-1">Already Member?</label>
                 </div>
             </div>
         </div>
     </div>
-</div>
+  </div>
+  
