--- a/src/app/user-main-page/user-main-page.component.css
+++ b/src/app/user-main-page/user-main-page.component.css
@@ -1,46 +1,57 @@
 .userMain {
-    width: 100%;
-    font-family: 'Arial', sans-serif;
-    /* background-color: #f8f9fa; */
-  }
-  
+  width: 100%;
+  font-family: 'Arial', sans-serif;
+  padding: 20px;
+  min-height: 100vh; /* Full height to ensure background covers */
+}
 
 .welcome {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .welcome h1 {
-    color: #333;
-  }
+  text-align: center;
+  margin-top: 20px;
+}
 
-  .dashboard {
-    margin: 20px;
-  }
-  
-  .dashboard h2 {
-    color: #333;
-  }
-  
-  .dashboard ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .dashboard li {
-    margin: 10px 0;
-  }
-  
-  .dashboard a {
-    color: rgb(239, 150, 116);
+.welcome h1 {
+  color: #5b6c70; /* Change to white for contrast against the background */
+  font-size: 2.5em; /* Larger font size */
+  margin-bottom: 10px;
+}
+
+.dashboard {
+  background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white for better visibility */
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+}
+
+.dashboard h2 {
+  color: #333;
+  margin-bottom: 15px;
+  font-size: 1.8em;
+}
+
+.dashboard ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.dashboard li {
+  margin: 15px 0;
+}
+
+.dashboard a {
+  display: block;
+    padding: 15px;
+    background-color: rgb(143 171 182);
+    color: white;
+    border-radius: 5px;
     text-decoration: none;
     font-size: 18px;
-    transition: font-size 0.3s ease, background-color 0.3s ease, color 0.3s ease;
-  }
-  
-  .dashboard a:hover {
-    font-size: 20px; /* Slight increase in font size */
-    /* background-color: #e0e0e0; */
-    color: rgb(239, 150, 116);
-  }
-  
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.dashboard a:hover {
+  transform: translateY(-3px);
+  background-color: rgb(220, 130, 100);
+}
