--- a/src/app/user-main-page/user-main-page.component.html
+++ b/src/app/user-main-page/user-main-page.component.html
@@ -4,13 +4,13 @@
         <h1>Welcome, {{ username }}!</h1>
     </div>
     <div class="dashboard">
-        <h2>Dashboard</h2>
+        <h2>Quick Access</h2>
         <ul>
-          <li><a routerLink="/buses">View Available Buses</a></li>
-          <li><a routerLink="/book-ticket">Book a Bus Ticket</a></li>
-          <li><a routerLink="/trip-history">Trip History</a></li>
+          <li><a routerLink="/user/bus">View Available Buses</a></li>
+
+          <li><a routerLink="/book">Book a Bus Ticket</a></li>
+          <!-- <li><a routerLink="/trip-history">Trip History</a></li> -->
         </ul>
     </div>
 </div>
 
-  
