--- a/src/app/navbar-user/navbar-user.component.css
+++ b/src/app/navbar-user/navbar-user.component.css
@@ -1,5 +1,6 @@
 /* Basic styling for the navbar */
 nav {
+
     background-color: rgb(80, 96, 101, 0.9); /* Dark background for the navbar */
     padding: 10px;
     display: flex;
@@ -8,8 +9,10 @@ nav {
     position: sticky; /* Sticks to the top on scroll */
     top: 0;
     z-index: 1000;
+    height:70px;
+
   }
-  
+
   nav a {
     color: white; /* White text color for the links */
     text-decoration: none; /* No underline */
@@ -17,30 +20,29 @@ nav {
     font-size: 16px;
     transition: background-color 0.3s, color 0.3s; /* Smooth transition on hover */
   }
-  
+
   nav a:hover {
     background-color: #4a4949; /* Change background color on hover */
     color: rgb(239, 150, 116, 0.9); /* Highlight color for the text on hover */
     border-radius: 5px; /* Rounded corners on hover */
   }
-  
+
   nav a.active {
     background-color: #fff; /* Highlight the active link */
     color: #333; /* Dark text for the active link */
     border-radius: 5px;
   }
-  
+
   /* Responsive Design for smaller screens */
   @media (max-width: 768px) {
     nav {
       flex-direction: column; /* Stack the links vertically on small screens */
       padding: 20px;
     }
-  
+
     nav a {
       padding: 10px 0; /* More padding for touch-friendly links */
       width: 100%; /* Make links take the full width */
       text-align: center; /* Center-align the links */
     }
   }
-  
