--- a/src/app/user-main-page/user-main-page.component.html
+++ b/src/app/user-main-page/user-main-page.component.html
@@ -5,12 +5,18 @@
     </div>
     <div class="dashboard">
         <h2>Quick Access</h2>
-        <ul>
-          <li><a routerLink="/user/bus">View Available Buses</a></li>
+        <nav>
+            <a routerLink="/user/bus">View Available Buses</a>
+            <a routerLink="/user/book">Book a Bus Ticket</a>
+        </nav>
+        <!-- <ul>
+            <li><a routerLink="user/bus">View Available Buses</a></li>
+            <li><a routerLink="user/book">Book a Bus Ticket</a></li>
 
-          <li><a routerLink="/book">Book a Bus Ticket</a></li>
-          <!-- <li><a routerLink="/trip-history">Trip History</a></li> -->
-        </ul>
+        </ul> -->
     </div>
+
 </div>
 
+
+has context menu
