some more changes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
 
           <!-- Sign Up Form -->
           <div class="sign-up-htm">
-              <form [formGroup]="signUpForm" (ngSubmit)="onSignUp()">
+              <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
                   <div class="group">
                       <label for="firstName" class="label">First Name</label>
                       <input id="firstName" type="text" formControlName="firstName" class="input" placeholder="Annu">
